Fix visibility of (borderless) text inputs in misc sortable collections (instance table rows, print templates etc)

--- a/src/Mapbender/ManagerBundle/Resources/public/sass/element/form.scss
+++ b/src/Mapbender/ManagerBundle/Resources/public/sass/element/form.scss
@@ -13,13 +13,6 @@
   .inputWrapper, .dropdown {
     width: calc(100% - #{$labelWidth + 20px});
   }
-  .choiceExpandedSortable {
-    &.input {
-      // undo fixed pixel height on .input
-      // @todo: .input should not have any height rule
-      height: auto;
-    }
-  }
   .left .checkbox {
     display: inline-block;
     margin-right: 20px;
